--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="Effective Solutions for Your Business" />
-    <title>homework_03</title>
+    <title>homework_04</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,7 +26,7 @@
             >Web<span class="logo-studio">Studio</span></a
           >
           <ul class="menu">
-            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="./index.html" class="link current">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a></li>
           </ul>
@@ -49,7 +49,7 @@
     </header>
 
     <main>
-      <section class="background">
+      <section class="background section">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
@@ -61,6 +61,7 @@
           <h2 class="visually-hidden">/</h2>
           <ul class="goals-column">
             <li class="goal">
+              <div class="icons-container"></div>
               <h3 class="goal-title">Strategy</h3>
               <p class="goal-text">
                 Our goal is to identify the business problem to walk away with
@@ -68,6 +69,7 @@
               </p>
             </li>
             <li class="goal">
+              <div class="icons-container"></div>
               <h3 class="goal-title">Punctuality</h3>
               <p class="goal-text">
                 Bring the key message to the brand's audience for the best price
@@ -75,6 +77,7 @@
               </p>
             </li>
             <li class="goal">
+              <div class="icons-container"></div>
               <h3 class="goal-title">Diligence</h3>
               <p class="goal-text">
                 Research and confirm brands that present the strongest digital
@@ -82,6 +85,7 @@
               </p>
             </li>
             <li class="goal">
+              <div class="icons-container"></div>
               <h3 class="goal-title">Technologies</h3>
               <p class="goal-text">
                 Design practice focused on digital experiences. We bring forth a
