--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
           <h2 class="visually-hidden">/</h2>
           <ul class="goals-column">
             <li class="goal">
-              <div class="icons-container"></div>
+              <div class="icons-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="goal-title">Strategy</h3>
               <p class="goal-text">
                 Our goal is to identify the business problem to walk away with
@@ -69,7 +73,11 @@
               </p>
             </li>
             <li class="goal">
-              <div class="icons-container"></div>
+              <div class="icons-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="goal-title">Punctuality</h3>
               <p class="goal-text">
                 Bring the key message to the brand's audience for the best price
@@ -77,7 +85,11 @@
               </p>
             </li>
             <li class="goal">
-              <div class="icons-container"></div>
+              <div class="icons-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="goal-title">Diligence</h3>
               <p class="goal-text">
                 Research and confirm brands that present the strongest digital
@@ -85,7 +97,11 @@
               </p>
             </li>
             <li class="goal">
-              <div class="icons-container"></div>
+              <div class="icons-container">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="goal-title">Technologies</h3>
               <p class="goal-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -110,8 +126,39 @@
               <div class="person-description">
                 <h3 class="person">Mark Guerrero</h3>
                 <p class="function">Product Designer</p>
+                <ul class="socials-list">
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="card">
               <img
                 src="./images/Tom_Ford.jpg"
@@ -122,8 +169,39 @@
               <div class="person-description">
                 <h3 class="person">Tom Ford</h3>
                 <p class="function">Frontend Developer</p>
+                <ul class="socials-list">
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="card">
               <img
                 src="./images/Camila_Garcia.jpg"
@@ -134,8 +212,39 @@
               <div class="person-description">
                 <h3 class="person">Camila Garcia</h3>
                 <p class="function">Marketing</p>
+                <ul class="socials-list">
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="card">
               <img
                 src="./images/Daniel_Wilson.jpg"
@@ -146,6 +255,36 @@
               <div class="person-description">
                 <h3 class="person">Daniel Wilson</h3>
                 <p class="function">UI Designer</p>
+                <ul class="socials-list">
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-circle">
+                    <a class="socials-link" href="">
+                      <svg class="socials-logo" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -157,72 +296,125 @@
           <h2 class="header-titles">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-card">
-              <img
-                src="./images/Banking_App.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="trans-box">
+                <img
+                  src="./images/Banking_App.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="item-portfolio">
                 <h3 class="portfolio-heading">Banking App</h3>
                 <p class="category">App</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/Cashless_Payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="trans-box">
+                <img
+                  src="./images/Cashless_Payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="item-portfolio">
                 <h3 class="portfolio-heading">Cashless Payment</h3>
                 <p class="category">Marketing</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/Meditation_App.jpg"
-                alt="Computer and phone"
-                width="360"
-                height="300"
-              />
+              <div class="trans-box">
+                <img
+                  src="./images/Meditation_App.jpg"
+                  alt="Computer and phone"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="item-portfolio">
                 <h3 class="portfolio-heading">Meditation App</h3>
                 <p class="category">App</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/Taxi_Service.jpg"
-                alt="Car interior"
-                width="360"
-                height="300"
-              />
+              <div class="trans-box">
+                <img
+                  src="./images/Taxi_Service.jpg"
+                  alt="Car interior"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="item-portfolio">
                 <h3 class="portfolio-heading">Taxi Service</h3>
                 <p class="category">Marketing</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/Screen_Illustrations.jpg"
-                alt="Phone screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="trans-box">
+                <img
+                  src="./images/Screen_Illustrations.jpg"
+                  alt="Phone screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="item-portfolio">
                 <h3 class="portfolio-heading">Screen Illustrations</h3>
                 <p class="category">Design</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/Online_Courses.jpg"
-                alt="Women with phone"
-                width="360"
-                height="300"
-              />
+              <div class="trans-box">
+                <img
+                  src="./images/Online_Courses.jpg"
+                  alt="Women with phone"
+                  width="360"
+                  height="300"
+                />
+
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+
               <div class="item-portfolio">
                 <h3 class="portfolio-heading">Online Courses</h3>
                 <p class="category">Marketing</p>
@@ -234,14 +426,50 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-studio-footer">Studio</span></a
-        >
-        <p class="text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-logo">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-studio-footer">Studio</span></a
+          >
+          <p class="text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div>
+          <p class="text-social">Social media</p>
+          <ul class="socials-list-footer">
+            <li class="socials-circle">
+              <a class="socials-link-footer" href="">
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-circle">
+              <a class="socials-link-footer" href="">
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-circle">
+              <a class="socials-link-footer" href="">
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-circle">
+              <a class="socials-link-footer" href="">
+                <svg class="socials-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
