--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
 
     <main>
-      <section class="background section">
+      <section class="background">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button type="button" class="button">Order Service</button>
